# hb-client

./: Cargo.toml  README.md
lib/idle-time/: Cargo.toml  build.rs
lib/idle-time/src/: lib.rs  linux.rs  macos.rs  windows.rs
src/: config.rs  error.rs  log.rs  main.rs
src/util/: linux.rs  macos.rs  mod.rs  windows.rs
