[package]
name = "hb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
figment = { version = "0.10.8", features = ["env", "toml"] }
idle-time = { version = "0.1.0", path = "lib/idle-time" }
ureq = "2.6.2"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"

[workspace]
members = [".", "lib/idle-time"]

[features]
default = ["5ht2b"]
5ht2b = []
