[package]
name = "idle-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.26"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
